Fix tertiary button shifting

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -77,6 +77,7 @@ $screen-desk: 1440px;
 
 /* Paddings */
 --padding-button: 16px 30px;
+--padding-button-white: 17px 31px;
 --padding-icon: 6px;
 --padding-icon-big: 18px;
 --padding-button-lg: 18px 38px;
